2006-08-25  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline
	2005-12-01  Ben Elliston  <bje@au.ibm.com>
	* Makefile.in (libdecnumber_a_SOURCES): Drop decLibrary.c.
	* decUtility.c (__dec_byte_swap): Move from here ..
	* decLibrary.c: .. to here.

	Backport from mainline
	2005-11-23  Gerald Pfeifer  <gerald@pfeifer.com>
	* decContext.h: Properly guard inclusion of stdint.h
	* decContext.c: Include config.h
	* decLibrary.c: Ditto.
	* decNumber.c: Ditto.
	* decRound.c: Ditto.
	* decUtility.c: Ditto.
	* decimal32.c: Ditto.
	* decimal64.c: Ditto.
	* decimal128.c: Ditto.

	Backport from mainline
	 2005-11-29  Ben Elliston  <bje@au.ibm.com>
	* decUtility.c: Remove redundant #includes.
	* decUtility.h (__dec_byte_swap): Remove prototype.

	Backport from mainline
	2005-11-29  Ben Elliston  <bje@au.ibm.com>
	* configure.ac: New file.
	* aclocal.m4: Likewise.
	* Makefile.in: Likewise.
	* configure: Generate.
	* config.in: Likewise.

	Backport from mainline
	2005-11-29  Ben Elliston  <bje@au.ibm.com>
	* decimal32.h, decimal64.h, decimal128.h: New.
        * decimal32.c, decimal64.c, decimal128.c: Likewise.
	* decContext.c, decContext.h: Likewise.
	* decUtility.c, decUtility.h: Likewise.
	* decNumber.c, decNumber.h, decNumberLocal.h: Likewise.
	* decDPD.h: Likewise.
	* decLibrary.c, decRound.c: Likewise.